force-app/main/default/objects/ServiceAppointment/fields/Arrival_Status__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Status__c</fullName>
    <formula>IF (

AND (SchedStartTime  &lt; ArrivalWindowEndTime,SchedStartTime &gt; ArrivalWindowStartTime) ,&quot;OnTime&quot;,
IF 
(
SchedStartTime&gt; ArrivalWindowEndTime,&quot;Late&quot;,&quot;Early&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrival Status</label>
    <type>Text</type>
</CustomField>