force-app/main/default/objects/ServiceAppointment/fields/ArrivalTimeOffset__c.field-meta.xml
<CustomField>
    <fullName>ArrivalTimeOffset__c</fullName>
    <formula>(TIMEVALUE(ArrivalWindowEndTime ) - TIMEVALUE(SchedStartTime))/60000</formula>
    <label>Arrival Time Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>