force-app/main/default/objects/ServiceAppointment/fields/Customer_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mobile_Number__c</fullName>
    <formula>Work_Order__r.Contact_Mobile_Number__c</formula>
    <label>Customer Mobile Number</label>
    <type>Text</type>
</CustomField>