force-app/main/default/objects/ServiceAppointment/fields/Customer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone_Number__c</fullName>
    <formula>Work_Order__r.Contact_Phone_Number__c</formula>
    <label>Customer Phone Number</label>
    <type>Text</type>
</CustomField>