force-app/main/default/objects/ServiceAppointment/fields/Failed_to_Geocode__c.field-meta.xml
<CustomField>
    <fullName>Failed_to_Geocode__c</fullName>
    <formula>Latitude = 0  || Longitude = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Failed to Geocode</label>
    <type>Checkbox</type>
</CustomField>