force-app/main/default/objects/ServiceAppointment/fields/FSL__InJeopardyReason__c.field-meta.xml
<CustomField>
    <fullName>FSL__InJeopardyReason__c</fullName>
    <label>In Jeopardy Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delayed Start</fullName>
            </value>
            <value>
                <fullName>Delayed Finish</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Due Date Approaching</fullName>
            </value>
            <value>
                <fullName>Not Scheduled</fullName>
            </value>
            <value>
                <fullName>Late Start Travel</fullName>
            </value>
            <value>
                <fullName>Late Start Work</fullName>
            </value>
            <value>
                <fullName>Late Completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>