force-app/main/default/objects/ServiceAppointment/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <description>For Storing Wennsoft Job Number.Job created in wennsoft once customer accept the quote.</description>
    <label>Job Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>