force-app/main/default/objects/ServiceAppointment/fields/Maintenance_Work__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Work__c</fullName>
    <formula>WorkType.Maintenance_Work__c</formula>
    <label>Maintenance Work</label>
    <type>Checkbox</type>
</CustomField>