force-app/main/default/objects/ServiceAppointment/fields/Mobile_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Start_Time__c</fullName>
    <label>Mobile Start Time</label>
    <type>DateTime</type>
</CustomField>