force-app/main/default/objects/ServiceAppointment/fields/Multi_Day_Work_Started__c.field-meta.xml
<CustomField>
    <fullName>Multi_Day_Work_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox field will be set to True when a Multi Day Appointment status changes to On-Site for the first time</description>
    <label>Multi Day Work Started</label>
    <type>Checkbox</type>
</CustomField>