force-app/main/default/objects/ServiceAppointment/fields/Parent_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Parent_Service_Territory__c</fullName>
    <formula>ServiceTerritory.ParentTerritory.Name</formula>
    <label>Parent Service Territory</label>
    <type>Text</type>
</CustomField>