force-app/main/default/objects/ServiceAppointment/fields/Planned_Scheduled_End__c.field-meta.xml
<CustomField>
    <fullName>Planned_Scheduled_End__c</fullName>
    <label>Planned Scheduled End</label>
    <type>DateTime</type>
</CustomField>