force-app/main/default/objects/ServiceAppointment/fields/Planned_Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Planned_Scheduled_Start__c</fullName>
    <label>Planned Scheduled Start</label>
    <type>DateTime</type>
</CustomField>