force-app/main/default/objects/ServiceAppointment/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Postal Code</label>
    <referenceTo>Postal_Codes__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>