force-app/main/default/objects/ServiceAppointment/fields/SLA_Violation__c.field-meta.xml
<CustomField>
    <fullName>SLA_Violation__c</fullName>
    <formula>AND(
NOT(ISNULL(SchedStartTime)),
NOT(ISNULL(SchedEndTime)), 
OR(
SchedStartTime &gt; ArrivalWindowEndTime,
SchedStartTime &lt; ArrivalWindowStartTime
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Violation</label>
    <type>Checkbox</type>
</CustomField>