force-app/main/default/objects/ServiceAppointment/fields/Static_Priority__c.field-meta.xml
<CustomField>
    <fullName>Static_Priority__c</fullName>
    <formula>CASE(WorkType.Priority__c,
  &quot;1&quot;, 1,
  &quot;2&quot;, 2,
  &quot;3&quot;, 3,
  &quot;4&quot;, 4,
  &quot;5&quot;, 5,
5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Static Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>