force-app/main/default/objects/ServiceAppointment/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is auto-set to the same record as the ParentRecordId (if the ParentRecordId is a Work Order). It allows easy reference to WO fields in flow GetRecords and SA formula fields. It should NOT be added to page layouts</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>WO Service Appointments</relationshipLabel>
    <relationshipName>WO_Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>