force-app/main/default/objects/ServiceAppointment/fields/Work_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Category__c</fullName>
    <formula>TEXT(WorkType.Work_Type_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Type Category</label>
    <type>Text</type>
</CustomField>