force-app/main/default/objects/ServiceAppointment/validationRules/Prevent_Changes_to_Completed_Appointment.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Changes_to_Completed_Appointment</fullName>
    <active>true</active>
    <description>This validation rule prevents users from making changes to Completed Service Appointments</description>
    <errorConditionFormula>AND (
NOT(ISNEW()),
ISPICKVAL(PRIORVALUE(Status),&quot;Completed&quot;)
)</errorConditionFormula>
    <errorMessage>This Service Appointment has been Completed and can no longer be updated</errorMessage>
</ValidationRule>