force-app/main/default/objects/ServiceAppointment/listViews/SLA_Violating_Appointments.listView-meta.xml
<ListView>
    <fullName>SLA_Violating_Appointments</fullName>
    <columns>Service_Job_ID__c</columns>
    <columns>Name</columns>
    <columns>Parent_Service_Territory__c</columns>
    <columns>ServiceTerritory</columns>
    <columns>ArrivalWindowStartTime</columns>
    <columns>ArrivalWindowEndTime</columns>
    <columns>Status</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>WorkType</columns>
    <columns>EstDuration</columns>
    <columns>EarliestStartTime</columns>
    <columns>LatestEndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SLA_Violation__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>SLA Violating Appointments</label>
</ListView>