force-app/main/default/objects/ServiceAppointment/listViews/Unscheduled_Appointments.listView-meta.xml
<ListView>
    <fullName>Unscheduled_Appointments</fullName>
    <columns>Service_Job_ID__c</columns>
    <columns>Name</columns>
    <columns>Parent_Service_Territory__c</columns>
    <columns>ServiceTerritory</columns>
    <columns>ArrivalWindowStartTime</columns>
    <columns>ArrivalWindowEndTime</columns>
    <columns>WorkType</columns>
    <columns>EstDuration</columns>
    <columns>Status</columns>
    <columns>CITY</columns>
    <columns>STREET</columns>
    <columns>EarliestStartTime</columns>
    <columns>LatestEndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Unscheduled Appointments</label>
</ListView>