force-app/main/default/objects/ServiceAppointment/listViews/VEC_Appointments.listView-meta.xml
<ListView>
    <fullName>VEC_Appointments</fullName>
    <columns>Service_Job_ID__c</columns>
    <columns>Name</columns>
    <columns>Parent_Service_Territory__c</columns>
    <columns>ServiceTerritory</columns>
    <columns>ArrivalWindowStartTime</columns>
    <columns>ArrivalWindowEndTime</columns>
    <columns>WorkType</columns>
    <columns>EstDuration</columns>
    <columns>Status</columns>
    <columns>Assigned_Resource__c</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>CITY</columns>
    <columns>STREET</columns>
    <columns>EarliestStartTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VEC__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>VEC Appointments</label>
</ListView>